@@ -1,17 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0"?>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.rub.rke</groupId>
 		<artifactId>rkeparent</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>brkeinstantiation</artifactId>
-	<packaging>jar</packaging>
-        <version>1.0</version>
-	<name>BRKE Instatiation</name>
+	<groupId>de.rub.brkeevaluation</groupId>
+	<artifactId>brkeevaluation</artifactId>
+	<version>1.0</version>
+	<name>Brke Evaluation</name>
 	<dependencies>
 		<dependency>
 			<groupId>de.rub.rke</groupId>
@@ -20,25 +21,19 @@
 		</dependency>
 		<dependency>
 			<groupId>de.rub.rke</groupId>
-			<artifactId>hibe-native</artifactId>
+			<artifactId>brkeinstantiation</artifactId>
 			<version>1.0</version>
-			<type>so</type>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.61</version>
 		</dependency>
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-    <version>2.9.8</version>
-</dependency>
-<dependency>
-    <groupId>com.fasterxml.jackson.module</groupId>
-    <artifactId>jackson-module-parameter-names</artifactId>
-    <version>2.9.8</version>
-</dependency>
+		<dependency>
+			<groupId>org.openjdk.jol</groupId>
+			<artifactId>jol-core</artifactId>
+			<version>0.9</version>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -58,9 +53,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.21.0</version>
-				<configuration>
-					<argLine>-Djava.library.path=${project.build.directory}/classes</argLine>
-				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.platform</groupId>
@@ -75,33 +67,26 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.10</version>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
 				<executions>
 					<execution>
-						<id>copy</id>
-						<phase>compile</phase>
 						<goals>
-							<goal>copy</goal>
+							<goal>java</goal>
 						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>de.rub.rke</groupId>
-									<artifactId>hibe-native</artifactId>
-									<version>1.0</version>
-									<type>so</type>
-									<overWrite>false</overWrite>
-									<outputDirectory>${project.build.directory}/classes</outputDirectory>
-									<destFileName>liblwhibe11.so</destFileName>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
 					</execution>
 				</executions>
+				<configuration>
+					<executable>java</executable>
+					<arguments>
+						<argument>-Djdk.attach.allowAttachSelf</argument>
+						<argument>-classpath</argument>
+						<classpath />
+						<argument>de.rub.brkeevaluation.BrkeEvaluation</argument>
+					</arguments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 </project>
-
